--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,14 @@
     "plugins": [
       {
         "name": "next"
-      }
+      } 
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/styles/*": ["./src/styles/*"],
+      "@/libs/*": ["./src/libs/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/pages/*": ["./src/app/pages/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
